<resources>
    <!-- App name -->
    <string name="app_name" translatable="false">Calmfulness Remastered</string>

    <!-- Activity names -->
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_exercise">Exercise</string>

    <!-- ExerciseActivity -->
    <string name="video_button_text">Click here to watch the video</string>

    <!-- Button names -->
    <string name="btn_start">Start</string>
    <string name="btn_retry">Retry</string>

    <!-- Notification -->
    <string name="exercise_notification_title">New exercise found!</string>
    <string name="exercise_notification_content">Tap this to open.</string>

    <!-- Bluetooth -->
    <string name="ble_not_supported">BluetoothLE not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported on this device</string>

    <!-- Application exit -->
    <string name="exit_app">Press again to exit…</string>

    <!-- Alert dialog -->
    <string name="alert_title">Attention!</string>
    <string name="alert_message_bluetooth_low_precision">Setting Bluetooth on lower precision may cause issues with beacon detection</string>
    <string name="alert_message_bluetooth_settings_changed">Bluetooth settings were changed while beacon scan was active. Restart scan again to apply new settings</string>
    <string name="alert_message_gps">Location is required! Turn on location?</string>
    <string name="alert_location_precision">Low and medium precision do not use GPS-tracking and may not work outdoors!</string>
    <string name="alert_location_interval">Please choose a value between 1 and 10!</string>

    <!-- Loading bar -->
    <string name="progressbar_loading">Loading&#8230;</string>

    <!-- Toolbar items -->
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_settings">Settings</string>
    <string name="scanning_start">Starting beacon scan</string>
    <string name="scanning_stop">Stopping beacon scan</string>

    <!-- Map markers -->
    <string name="marker_start">Start</string>
    <string name="marker_end">End</string>

    <!-- Settings -->
    <string name="settings_general_title">Settings</string>
    <string name="settings_route_title">Route settings</string>

    <!-- Location -->
    <string name="location_precision_title">Location precision</string>
    <string name="location_precision_summary">Changes location precision of the device on a map</string>
    <string name="location_interval_title">Location request interval</string>
    <string name="location_interval_summary">Changes the interval of location requests in seconds</string>

    <!-- Route drawing -->
    <string name="route_draw_title">Draw a route</string>
    <string name="route_draw_summary">Shows the route on a map</string>

    <!-- Map type -->
    <string name="map_type_title">Map type</string>
    <string name="map_type_summary">Changes map type</string>

    <!-- Bluetooth -->
    <string name="bluetooth_precision_title">Bluetooth precision</string>
    <string name="bluetooth_precision_summary">Changes Bluetooth precision</string>

    <!-- Sound control -->
    <string name="sound_control_summary">Plays background music in main screen</string>
    <string name="sound_control_title">Background music</string>

    <!-- About -->
    <string name="about_title">About</string>

    <!--Route chooser -->
    <string name="route_choose_title">Choose a route</string>
    <string name="route_choose_summary">Pick a route to be drawn on a map</string>

    <!-- About screen -->
    <string name="credits_title">Credits</string>
    <string name="credits_summary">Jerry Lehtisyrjä and Toni Lavonen 2017</string>
    <string name="credits_general_title">General information</string>
    <string name="credits_general_summary">This software was funded by the Finnish Ministry of Education and Culture, and is intended for non-commercial use only</string>
    <string name="credits_images_title">Images</string>
    <string name="credits_images_summary">Under CC0 License from pexels.com</string>
    <string name="credits_music_title">Music</string>
    <string name="credits_music_summary">Free Nature Sounds by Alexander from orangefreesounds.com under CC BY 4.0</string>
    <string name="credits_icon_title">Icon</string>
    <string name="credits_icon_summary">Forest by Freepik from Flaticon.com under CC BY 3.0</string>
    <string name="credits_blur_title">BlurView</string>
    <string name="credits_blur_summary">By Dmitry Saviuk from GitHub under Apache 2.0</string>


    <!-- Array item labels -->
    <!-- Generic trinity of values to describe precision and power usage -->
    <string name="generic_precision_high">High precision</string>
    <string name="generic_precision_medium">Medium precision</string>
    <string name="generic_precision_low">Low precision</string>

    <!-- Map items -->
    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_normal">Normal</string>
    <string name="alert_positive">Yes</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_title_apache">View License</string>
    <string name="alert_message_apache">Do you want to view Apache License?</string>
    <string name="apache_url" translatable="false">http://www.apache.org/licenses/LICENSE-2.0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
