<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_title">

        <Preference
            android:key="routeSettings"
            android:title="@string/route_choose_title"
            android:summary="@string/route_choose_summary" />

        <SwitchPreference
            android:key="drawRoute"
            android:title="@string/route_draw_title"
            android:summary="@string/route_draw_summary"
            android:defaultValue="true"
            android:persistent="true" />

        <ListPreference
            android:key="mapType"
            android:title="@string/map_type_title"
            android:summary="@string/map_type_summary"
            android:entries="@array/mapItems"
            android:entryValues="@array/mapTypeValues"
            android:defaultValue="2"
            android:persistent="true" />

        <Preference
            android:key="about"
            android:title="@string/about_title" />

    </PreferenceCategory>

</PreferenceScreen>